Make list-items horizontal and fix header spacing
Set `ul` as flexboxs, and add `justify-content: space-between` to them.

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,8 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
@@ -12,6 +14,8 @@
 }
 
 ul {
+  display: flex;
+  justify-content: space-between;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
@@ -22,9 +26,4 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-}
-
-.header {
-  display: flex;
-  justify-content: space-around;
 }
